--- a/pom.xml
+++ b/pom.xml
@@ -79,6 +79,7 @@
 				<artifactId>spring-boot-maven-plugin</artifactId>
 			</plugin>
 		</plugins>
+		<finalName>ofx-gateway</finalName>
 	</build>
 
 </project>
