--- a/.github/workflows/maven.yml
+++ b/.github/workflows/maven.yml
@@ -37,5 +37,5 @@ jobs:
         tags: latest
         registry: docker.io
         dockerfile: Dockerfile
-        username: ${{ secrets.DOCKER_USERNAME.DOCKER_USERNAME }}
-        password: ${{ secrets.DOCKER_PASSWORD.DOCKER_USERNAME }}
+        username: ${{ secrets.DOCKER_USERNAME }}
+        password: ${{ secrets.DOCKER_PASSWORD }}
