--- a/.github/workflows/maven.yml
+++ b/.github/workflows/maven.yml
@@ -46,6 +46,6 @@ jobs:
         host: ${{ secrets.VPS_HOST }}
         username: ${{ secrets.VPS_USER }}
         password: ${{ secrets.VPS_SSH_KEY }}
-        port: ${{ secrets.VPS_HOST }}
+        port: ${{ secrets.VPS_PORT }}
         script: |
           cd /srv/deploy/;docker stop ofx-gateway;docker rm ofx-gateway;docker pull luisfj/ofx-gateway:latest;docker run luisfj/ofx-gateway -d --env-file ./.env
