--- a/.github/workflows/maven.yml
+++ b/.github/workflows/maven.yml
@@ -48,4 +48,4 @@ jobs:
         key: ${{ secrets.VPS_SSH_KEY }}
         port: ${{ secrets.VPS_PORT }}
         script: |
-          cd /srv/deploy/;docker stop ofx-gateway;docker rm ofx-gateway;docker pull luisfj/ofx-gateway:latest;docker run luisfj/ofx-gateway -d --env-file ./.env
+          cd /srv/;docker stop ofx-gateway;docker rm ofx-gateway;docker pull luisfj/ofx-gateway:latest;docker run -d --env-file ./deploy/.env --name ofx-gateway -p 8080:8080 luisfj/ofx-gateway
