--- a/.github/workflows/maven.yml
+++ b/.github/workflows/maven.yml
@@ -48,4 +48,4 @@ jobs:
         key: ${{ secrets.VPS_SSH_KEY }}
         port: ${{ secrets.VPS_PORT }}
         script: |
-          cd /srv;docker stop ofx-gateway;docker rm ofx-gateway;docker pull luisfj/ofx-gateway:latest;docker run -d --env-file ./deploy/env.list --network prodnet --name ofx-gateway -p 8080:8080 luisfj/ofx-gateway
+          cd /srv;docker stop ofx-gateway;docker rm ofx-gateway;docker pull luisfj/ofx-gateway:latest;docker run -d --env-file ./deploy/env.list --network deploy_prodnet --name ofx-gateway -p 8080:8080 luisfj/ofx-gateway
