--- a/.github/workflows/maven.yml
+++ b/.github/workflows/maven.yml
@@ -16,7 +16,7 @@ on:
 
 jobs:
   build:
-
+    name: Test & Build & Docker Image
     runs-on: ubuntu-latest
 
     steps:
@@ -40,6 +40,11 @@ jobs:
         username: ${{ secrets.DOCKER_USERNAME }}
         password: ${{ secrets.DOCKER_PASSWORD }}
 
+  deploy_to_vps:
+    name: Push to VPS
+    runs-on: ubuntu-latest
+    needs: build
+    steps:
     - name: Deploy using ssh
       uses: appleboy/ssh-action@master
       with:
