--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -20,28 +20,42 @@ spring:
                         allowedHeaders: '*'
                         maxAge: 30
             routes:
+                -   id: ofx-service-regitry
+                    uri: lb://ofx-service-regitry
+                    predicates:
+                        - Path=/eureka/**
+
                 -   id: ofx-ms-import
-                    uri: http://localhost:8040
+                    uri: lb://ofx-ms-import
                     predicates:
                         - Path=/api/v1/import/**
 
                 -   id: ofx-ms-data
-                    uri: http://localhost:8030
+                    uri: lb://ofx-ms-data
                     predicates:
                         - Path=/api/v1/data/**
+                    # filters:
+                    #     - AddRequestHeader=Authorization, 'Bearer #{request.headers.Authorization}'
 
                 -   id: ofx-ms-sse
-                    uri: http://localhost:8099
+                    uri: lb://ofxmssse
                     predicates:
                         - Path=/api/v1/sse/**
 
                 -   id: ofx-permission-checker
-                    uri: http://localhost:8050
+                    uri: lb://ofx-permission-checker
                     predicates:
                         - Path=/api/v1/permission-checker/**
-                    metadata:
-                        cors:
-                            allowedOrigins: '*'
-                            allowedMethods: GET,POST                            
-                            allowedHeaders: '*'
-                            maxAge: 30
+                
+                    # filters:
+                        # - AddRequestHeader=Authorization, 'Bearer #{request.headers.Authorization}'
+                    # metadata:
+                    #     cors:
+                    #         allowedOrigins: '*'
+                    #         allowedMethods: GET,POST                            
+                    #         allowedHeaders: '*'
+                    #         maxAge: 30
+eureka:
+  client:
+    service-url:
+      defaultZone : http://localhost:8761/eureka/                    
