Update prod config

--- a/src/main/resources/application-dev.yml
+++ b/src/main/resources/application-dev.yml
@@ -9,3 +9,6 @@ logging:
         org:
             springframework: 
                 security: DEBUG
+
+conf:
+    access_control_allow_origin: http://localhost:3000
