--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -68,25 +68,25 @@ eureka:
     service-url:
       defaultZone : http://localhost:8761/eureka/
 
-logging:
-    level:
-        root: DEBUG
-        org.apache.http: DEBUG
-        org.springframework.web: DEBUG
-        dev.luisjohann.ofxpermissionchecker: DEBUG
-        org.springframework.security: DEBUG
-        org.springframework.security.oauth2: DEBUG
-        org.springframework.security.web.authentication: DEBUG
-        org.springframework.security.oauth2.client: DEBUG
-        org.springframework.security.oauth2.jwt: DEBUG
-        org.springframework.security.oauth2.server.resource: DEBUG
-        org.keycloak: DEBUG
-        org.keycloak.adapters: DEBUG
-        org.keycloak.authentication: DEBUG
-        org.keycloak.events: DEBUG
-        org.springframework.web.reactive.DispatcherHandler: DEBUG
-        org.springframework.web.reactive.function.client: DEBUG
-        org.springframework.web.reactive.function.server: DEBUG
-        org.springframework.web.filter.reactive: DEBUG
-        org.springframework.web.reactive.function.client.ExchangeFunctions: DEBUG
-        reactor.netty: INFO
+#logging:
+#    level:
+#        root: DEBUG
+#        org.apache.http: DEBUG
+#        org.springframework.web: DEBUG
+#        dev.luisjohann.ofxpermissionchecker: DEBUG
+#        org.springframework.security: DEBUG
+#        org.springframework.security.oauth2: DEBUG
+#        org.springframework.security.web.authentication: DEBUG
+#        org.springframework.security.oauth2.client: DEBUG
+#        org.springframework.security.oauth2.jwt: DEBUG
+#        org.springframework.security.oauth2.server.resource: DEBUG
+#        org.keycloak: DEBUG
+#        org.keycloak.adapters: DEBUG
+#        org.keycloak.authentication: DEBUG
+#        org.keycloak.events: DEBUG
+#        org.springframework.web.reactive.DispatcherHandler: DEBUG
+#        org.springframework.web.reactive.function.client: DEBUG
+#        org.springframework.web.reactive.function.server: DEBUG
+#        org.springframework.web.filter.reactive: DEBUG
+#        org.springframework.web.reactive.function.client.ExchangeFunctions: DEBUG
+#        reactor.netty: INFO
